2000-03-12  Ettore Perazzoli  <ettore@helixcode.com>

	* htmltextmaster.c
	(check_point): Do not make the offset be greater than the string's
	length.

	* htmlclueflow.c
	(check_point): New function, implementation of
	`HTMLObject::check_point'.
	(html_clueflow_class_init): Install it.

	* htmltextmaster.c
	(check_point): Consider an object to be on a new line by comparing
	the y coordinate too.

	* htmlengine.c
	(html_engine_get_object_at): If `for_cursor', clip the coordinates
	to the cluev's area.

2000-03-09  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c
	(focus_in_event): Give the engine the focus with
	`html_engine_set_focus()'.
	(focus_out_event): Remove the focus from the engine with
	`html_engine_set_focus()'.

	* htmlengine.c
	(html_engine_set_focus): New function.

	* htmlengine.h: New member `have_focus' in `HTMLEngine'.

	* gtkhtml.c
	(destroy): Argh!  Destroy the `HTMLEngine'!

	* gtkhtml-keybinding.c
	(gtk_html_handle_key_event): If the key event is handled, reset
	the blinking cursor with `html_engine_reset_blinking_cursor()'.

	* htmlengine.c
	(html_engine_init): Initialize `blinking_timer_id'.
	(html_engine_destroy): If `blinking_timer_id' is nonzero, remove
	the corresponding timeout.
	(html_engine_set_editable): If the engine becomes editable, call
	`html_engine_setup_blinking_cursor()'.  If it beomes non editable,
	call `html_engine_stop_blinking_cursor()'.

	* htmlengine-edit-cursor.c
	(html_engine_setup_blinking_cursor): New function.
	(html_engine_stop_blinking_cursor): New function.
	(html_engine_reset_blinking_cursor): New function.
	(blink_timeout_cb): New static function that implements cursor
	blinking.

	* htmlengine.h: New members `blinking_timer_id', `blinking_status'
	in `HTMLEngine'.

	* htmldrawqueue.c
	(draw_obj): Don't draw objects whose width and/or height is zero.

	* htmlengine.c
	(html_engine_draw_cursor): Removed.
	(html_engine_flush_draw_queue): Don't call it anymore.  Added